objects/SL_RAID_Items__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UAT_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsMe__c</fullName>
        <formula>Assigned_To__c =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOE_for_Enhancements__c</fullName>
        <description>Level of effort for Enhancements</description>
        <label>LOE for Enhancements (hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mitigation_Plan__c</fullName>
        <label>Mitigation Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Need_for_Pilot_Launch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Place specific comments/questions into Next Steps area</inlineHelpText>
        <label>Open questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Detail__c</fullName>
        <label>Question Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Listed as bug, but functionality works</fullName>
                </value>
                <value>
                    <fullName>Listed as bug, but this is an enhancement request</fullName>
                </value>
                <value>
                    <fullName>Listed as bug, but this is a discussion topic/question</fullName>
                </value>
                <value>
                    <fullName>Listed as Blocker, but not blocking key functionality (more minor issue)</fullName>
                </value>
                <value>
                    <fullName>New Requirement</fullName>
                </value>
                <value>
                    <fullName>Change in Requirement (rework)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <label>Risk/Issue?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SL_Assignee__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InTrust Team</fullName>
                    <label>INTRUST Team</label>
                </value>
                <value>
                    <fullName>Silverline</fullName>
                </value>
                <value>
                    <fullName>nCino</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                    <default>true</default>
                    <label>TBD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SL_Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SL_Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SL_Notes__c</fullName>
        <inlineHelpText>Additional notes to describe the issue, links, or pics here.</inlineHelpText>
        <label>Description/Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SL_Pre_UAT_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-UAT Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SL_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Blocker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SL_Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned for fix</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Future enhancement</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SL_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Inputs Pending</fullName>
                </value>
                <value>
                    <fullName>Ready for re-test</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Closed - Duplicate</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Deferred to Future Release</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SL_Title__c</fullName>
        <description>UAT user issue</description>
        <inlineHelpText>Type your issue here.</inlineHelpText>
        <label>Title</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Type__c</fullName>
        <inlineHelpText>Select what type of issue it is.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                    <default>true</default>
                    <label>Enhancement / Refinement</label>
                </value>
                <value>
                    <fullName>Question/Discussion</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Other Task</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SL_Workflow_Area__c</fullName>
        <inlineHelpText>Where are you seeing this error?</inlineHelpText>
        <label>Workflow Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adverse Actions Withdraw / Decline</fullName>
                </value>
                <value>
                    <fullName>Approval Process</fullName>
                </value>
                <value>
                    <fullName>Borrowing Structure</fullName>
                </value>
                <value>
                    <fullName>Checklists and Loan Tasks</fullName>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Conditions of Approval</fullName>
                </value>
                <value>
                    <fullName>Connections</fullName>
                </value>
                <value>
                    <fullName>Construction Loan Administration (Budget)</fullName>
                </value>
                <value>
                    <fullName>Covenants</fullName>
                </value>
                <value>
                    <fullName>Credit Actions</fullName>
                </value>
                <value>
                    <fullName>Customer Portal</fullName>
                </value>
                <value>
                    <fullName>Deposits</fullName>
                </value>
                <value>
                    <fullName>Disbursements - Funding</fullName>
                </value>
                <value>
                    <fullName>Document Manager</fullName>
                </value>
                <value>
                    <fullName>Exposure</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
                <value>
                    <fullName>Field History Tracking</fullName>
                </value>
                <value>
                    <fullName>Form Generation</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Memo</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Policy Exceptions</fullName>
                </value>
                <value>
                    <fullName>Product Package</fullName>
                </value>
                <value>
                    <fullName>Rates and Payments</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Relationships / Clients</fullName>
                </value>
                <value>
                    <fullName>Risk Rating</fullName>
                </value>
                <value>
                    <fullName>Spreading</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SL_Worksheet_Number__c</fullName>
        <label>Worksheet Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_in_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated in Production</label>
        <type>Checkbox</type>
    </fields>
    <label>RAID Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>SL_Title__c</columns>
        <columns>SL_Status__c</columns>
        <columns>SL_Type__c</columns>
        <columns>SL_Priority__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>SL_Title__c</columns>
        <columns>SL_Details__c</columns>
        <columns>SL_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Due_Date__c</columns>
        <columns>SL_Next_Steps__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SL_RAID_Items__c.Action_Item</value>
        </filters>
        <label>All Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Issues</fullName>
        <columns>NAME</columns>
        <columns>SL_Title__c</columns>
        <columns>SL_Status__c</columns>
        <columns>SL_Type__c</columns>
        <columns>SL_Priority__c</columns>
        <columns>SL_Assignee__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>SL_Notes__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SL_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Closed - Duplicate,NA,Deferred to Future Release</value>
        </filters>
        <label>All Open Issues</label>
    </listViews>
    <listViews>
        <fullName>All_Project_Issues</fullName>
        <columns>NAME</columns>
        <columns>SL_Title__c</columns>
        <columns>SL_Type__c</columns>
        <columns>SL_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SL_RAID_Items__c.SL_Project_Risk_Issue</value>
        </filters>
        <filters>
            <field>Risk_Level__c</field>
            <operation>equals</operation>
            <value>Issue</value>
        </filters>
        <label>All Project Issues</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All_Assigned_to_Me</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SL_Priority__c</columns>
        <columns>SL_Title__c</columns>
        <columns>SL_Next_Steps__c</columns>
        <columns>SL_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SL_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,NA</value>
        </filters>
        <label>UAT Issues - Open &amp; Assigned to Me</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>SL_Title__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>SL_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SL_RAID_Items__c.Action_Item</value>
        </filters>
        <filters>
            <field>SL_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>IsMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Action Items</label>
    </listViews>
    <listViews>
        <fullName>SL_All_Decisions</fullName>
        <columns>NAME</columns>
        <columns>SL_Title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SL_RAID_Items__c.SL_Project_Decision</value>
        </filters>
        <label>All Decisions</label>
    </listViews>
    <listViews>
        <fullName>SL_All_Open_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>SL_Title__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>SL_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SL_RAID_Items__c.Action_Item</value>
        </filters>
        <filters>
            <field>SL_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>All Open Action Items</label>
    </listViews>
    <listViews>
        <fullName>SL_All_Risk_Issues</fullName>
        <columns>NAME</columns>
        <columns>SL_Title__c</columns>
        <columns>SL_Type__c</columns>
        <columns>SL_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SL_RAID_Items__c.SL_Project_Risk_Issue</value>
        </filters>
        <filters>
            <field>Risk_Level__c</field>
            <operation>equals</operation>
            <value>Risk</value>
        </filters>
        <label>All Project Risks</label>
    </listViews>
    <listViews>
        <fullName>SL_Completed_Issues</fullName>
        <columns>NAME</columns>
        <columns>SL_Workflow_Area__c</columns>
        <columns>SL_Title__c</columns>
        <columns>SL_Next_Steps__c</columns>
        <columns>SL_Status__c</columns>
        <columns>SL_Worksheet_Number__c</columns>
        <columns>SL_Priority__c</columns>
        <columns>SL_Assignee__c</columns>
        <columns>SL_Pre_UAT_Issue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SL_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed Issues</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>RAID Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAID Items</pluralLabel>
    <recordTypes>
        <fullName>Action_Item</fullName>
        <active>true</active>
        <description>Project Action Items</description>
        <label>Action Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>SL_Project_Decision</fullName>
        <active>true</active>
        <description>Project Decisions</description>
        <label>Project Decision</label>
    </recordTypes>
    <recordTypes>
        <fullName>SL_Project_Risk_Issue</fullName>
        <active>true</active>
        <description>Project Risks and Issues</description>
        <label>Project Risk/Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>SL_Testing_System_Issue</fullName>
        <active>true</active>
        <description>System Issues or Data Issues</description>
        <label>Testing/System Issue</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>